# nrf24_ble_android

./: .gitignore  readme.txt  test.txt
bleapp/: README.md  pubspec.yaml
bleapp/lib/: app.dart  bottom_nav.dart  home.dart  main.dart  source.dart
micropython/: i2c_display.py  i2c_motor.py  i2c_rp2040zero.py  i2c_slave.py  i2c_slave_pcduino.py  i2c_slave_test.py  i2c_test.py  servo.py  servo1.py
motor/: CMakeLists.txt  main.c
nrfRx/: CMakeLists.txt  main.c  motor.h  nrf24.h  nrf24_pcduino.txt  nrf24_rp2040_zero.txt  servo.h
nrfTx/: CMakeLists.txt  main.c
nrfTx/ble/: ble.h  gap_config.h
nrfTx/nrf24/: nrf24.h
nrfTx/thread/: pt_cornell_rp2040_v1_3.h
